--- a/CTLungMaskGenerator/Resources/UI/CTLungMaskGenerator.ui
+++ b/CTLungMaskGenerator/Resources/UI/CTLungMaskGenerator.ui
@@ -70,7 +70,7 @@
          <bool>false</bool>
         </property>
         <property name="placeMultipleMarkups">
-         <enum>qSlicerMarkupsPlaceWidget::ForcePlaceSingleMarkup</enum>
+         <enum>qSlicerMarkupsPlaceWidget::ForcePlaceMultipleMarkups</enum>
         </property>
         <property name="currentNodeActive">
          <bool>false</bool>
@@ -98,6 +98,9 @@
         <property name="statusTip">
          <string>Place a marker somewhere on the left lung. </string>
         </property>
+        <property name="placeMultipleMarkups">
+         <enum>qSlicerMarkupsPlaceWidget::ForcePlaceMultipleMarkups</enum>
+        </property>
        </widget>
       </item>
       <item row="6" column="0">
@@ -115,33 +118,25 @@
         <property name="toolTip">
          <string>Place a marker on the upper trachea (above upper thoracic aperture) </string>
         </property>
+        <property name="placeMultipleMarkups">
+         <enum>qSlicerMarkupsPlaceWidget::ForcePlaceMultipleMarkups</enum>
+        </property>
+        <property name="currentNodeActive">
+         <bool>false</bool>
+        </property>
+        <property name="placeModeEnabled">
+         <bool>false</bool>
+        </property>
        </widget>
       </item>
       <item row="7" column="0">
-       <widget class="QLabel" name="label_7">
-        <property name="toolTip">
-         <string>Place a marker on the tracheal bifurcation, orientated to the left main bronchus. </string>
-        </property>
-        <property name="text">
-         <string>Bifurcation</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="1">
-       <widget class="qSlicerMarkupsPlaceWidget" name="markerBifurcation">
-        <property name="toolTip">
-         <string>Place a marker on the tracheal bifurcation, orientated to the left main bronchus. </string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Lung thresholds:</string>
         </property>
        </widget>
       </item>
-      <item row="8" column="1">
+      <item row="7" column="1">
        <widget class="ctkRangeWidget" name="ThresholdRangeWidget">
         <property name="toolTip">
          <string>Select the threshold range to identify lung parenchyma here. Min will always be set to minimum voxel inbtensity in the algorithm. In doubt do not touch. </string>
@@ -160,14 +155,14 @@
         </property>
        </widget>
       </item>
-      <item row="9" column="0">
+      <item row="8" column="0">
        <widget class="QPushButton" name="resetButton">
         <property name="text">
          <string>Reset algorithm</string>
         </property>
        </widget>
       </item>
-      <item row="9" column="1">
+      <item row="8" column="1">
        <widget class="QCheckBox" name="cb_keepMarkers">
         <property name="toolTip">
          <string>If checked, the previously defined markers are used again. </string>
@@ -186,20 +181,17 @@
       <string>Outputs</string>
      </property>
      <layout class="QFormLayout" name="formLayout_4">
-      <item row="1" column="0">
-       <widget class="QCheckBox" name="cb_show3D">
-        <property name="toolTip">
-         <string>Creates a spacial reconstruction of the segmentations. </string>
-        </property>
-        <property name="text">
-         <string>show result in 3D (longer waiting time)</string>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Autromatically creates new lung segmentations.  </string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="toggleSegmentsButton">
+        <property name="text">
+         <string>Toggle segments on/off</string>
         </property>
        </widget>
       </item>
